--- a/DScaler/Help/GradualNoise.htm
+++ b/DScaler/Help/GradualNoise.htm
@@ -102,7 +102,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             Don&rsquo;t run this filter at the same time as the
-            Temporal Noise Filter. Together they give you the &ldquo;comical
+            <A HREF="Noise.HTM">Temporal Noise</A> filter. Together they give you the &ldquo;comical
             posterization and speckling&rdquo; filter.
           </P>
           <!-- #EndEditable -->
