--- a/DScaler/Help/OldGame.htm
+++ b/DScaler/Help/OldGame.htm
@@ -63,7 +63,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             deinterlacing like most DScaler methods, it smoothes vertically. That gets rid of
             the blockiness you&rsquo;d otherwise see. It works nicely with just about any game on a
             PlayStation, Super Nintendo, or Genesis. Presumably, it will work well with a
-            Nintendo 64, Saturn, Atari, NES, Megadrive, and so on. Just don&rsquo;t try it with
+            Nintendo 64, Saturn, Atari, NES, Master System, and so on. Just don&rsquo;t try it with
             your Vectrex.
           </P>
           <P>
