--- a/DScaler/Help/Sharpness.HTM
+++ b/DScaler/Help/Sharpness.HTM
@@ -55,8 +55,7 @@ height="2"></td>
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
-<p>The sharpness filter uses Tom Barry's method for increasing the detail.  
-This filter only works on CPU's with either MMXEXT or SSE support.</p>
+<p>The sharpness filter uses Tom Barry's method for increasing the detail.</p>
 <p>This filter should not be used with good sources but it seems to improve detail 
 on VCR sources.</p>
 <table border="1">
