--- a/DScaler/Help/TemporalComb.htm
+++ b/DScaler/Help/TemporalComb.htm
@@ -61,8 +61,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <P>
             This filter removes dot crawl and some kinds of shimmering. The effect is most
             noticeable on computer generated images like subtitles, weather maps, and
-            station logos using a composite video signal. Normal composite video is more
-            subtly improved.
+            station logos using a composite or poorly separated S-Video signal.
+            Normal video is more subtly improved.
           </P>
           <HR>
           <P>
@@ -76,12 +76,20 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <P>
             If your computer is fast enough, you should run the comb filter whenever you&rsquo;re
             watching a composite signal. That&rsquo;s what you have if you&rsquo;re using an
-            internal TV tuner or an RCA connector. It also helps very slightly with shimmering from
-            an S-Video signal&nbsp;&mdash; but you can probably find something more
-            productive to keep your processor busy.
+            internal TV tuner or an RCA connector.
           </P>
           <P>
-            The comb filter helps a great deal with games for recent consoles such as the
+            You should also use the comb filter if your S-Video source isn&rsquo;t separated very well.
+            DVD players should have great separation if you connect them with S-Video. LaserDiscs and
+            S-VHS VCRs vary&nbsp;&mdash; If they have a &ldquo;3D comb filter,&rdquo; then
+            dot crawl should already be taken care of. If you have any other kind of comb filter, then
+            the Temporal Comb may or may not help&nbsp;&mdash; you&rsquo;ll have to judge for yourself.
+            If your S-VHS VCR or LaserDisc does not have a comb filter, then the Temporal Comb filter should
+            be very worthwhile.
+          </P>
+          <P>
+            The comb filter helps a great deal with composite (but not S-Video) connected games for
+            recent consoles such as the
             PS2&nbsp;&mdash; but it doesn&rsquo;t do a thing for video from older consoles like the
             Super Nintendo or original PlayStation. To get rid of color crosstalk from older
             consoles, turn off this filter and use the <A HREF="OldGame.htm">Old Game</A>
