--- a/htdocs/setup/index.htm
+++ b/htdocs/setup/index.htm
@@ -89,9 +89,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         the proper aspect ratio.</p>
       <h3><img src="setup_ar_advanced_ratios.jpg" border="2"></h3>
       <p><br>
-        For more information about the advanced features available via the DScaler.ini 
-        file, please see the <a href="../IniFile.HTM">.ini documentation</a>. 
-      </p>
+        For more information about the advanced features available in DScaler, 
+        please see the <a href="/Help/">Help</a> documentation.. </p>
       <h2><br>
         What if That Doesn't Work?</h2>
       <p> Please visit the HTPC section of the <a href="http://www.avsforum.com/"> 
