Small clean up.

--- a/htdocs/Filter.htm
+++ b/htdocs/Filter.htm
@@ -55,18 +55,20 @@ height="2"></td>
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
 
-<p>The DScaler team also is working on adding support for thier algorithms as
-DirectShow filters.  This project is still in it's early stages but we have made 
-some progress.</p>
-
-<p>Our most recent code (1.2.0 released 17th November 2001) is availiable here</p>
+      <p>The DScaler team also is working on adding support for its algorithms 
+        as DirectShow filters. This project is still in it's early stages but 
+        we have made some progress.</p>
+      <p>Our most recent code (1.2.0 released 17th November 2001) is available 
+        for download:</p>
 <ul>
 <li><a href="http://prdownloads.sourceforge.net/deinterlace/Deinterlace120ax.zip">Filter</a></li>
 <li><a href="http://prdownloads.sourceforge.net/deinterlace/Deinterlace120src.zip">Source code</a></li>
 </ul>
-<p>These files are not supported only on the mailing list at this time.</p>
-<p>If you wish to ship versions of these files with any product then please 
-contact the mailing list for advice on how to make sure the GPL is complied with.</p>
+      <p>These files are not yet supported for end-users. Please refer all developer 
+        questions to the developer mailing list at this time.</p>
+      <p>If you wish to ship versions of these files with any commercial product, 
+        then please contact the developer mailing list for advice on how to make 
+        sure you are complying with the GNU General Public License.</p>
 
 <!-- #EndEditable -->
 </td>
@@ -115,7 +117,7 @@ href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> |
 
 <p> </p>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
