Updated the estimated speed of the filters

--- a/DScaler/Help/AdaptiveNoise.htm
+++ b/DScaler/Help/AdaptiveNoise.htm
@@ -204,7 +204,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <HR>
           <P>
             <B><A NAME="Fun With Noise"><FONT FACE="Arial" SIZE="4">
-              Fun With Noise
+              Fun with Noise
             </FONT></A></B>
           </P>
           <P>
@@ -292,8 +292,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <A HREF="Noise.htm">Temporal Noise</A> filters, which
             work fine on older computers. If you can run any
             filter, Temporal Noise and Gradual Noise are roughly
-            the same speed at about 150 MHz. The Adaptive Noise
-            filter is much slower, using about 300 MHz.
+            the same speed at about 100 MHz. The Adaptive Noise
+            filter is much slower, using about 200 MHz.
           </P>
           <P>
             The Temporal Noise filter can give you a very
@@ -317,7 +317,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             reduction with minimal harm to the picture. It
             delays the picture a little, making use of colors in
             upcoming fields in order to figure out how to reduce
-            noise. The median filter is very slow (taking about 600
+            noise. The median filter is very slow (taking about 700
             MHz), but you get excellent deinterlacing as
             well as the noise reduction.
           </P>
