Clarified calibration procedure

--- a/DScaler/Help/Histogram.htm
+++ b/DScaler/Help/Histogram.htm
@@ -134,26 +134,28 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </P>
           <P>
             You can use this filter to manually calibrate signals for which you don&rsquo;t have a calibration
-            pattern. Just set the Histogram filter&rsquo;s <FONT COLOR="#993300">Display Mode</FONT> to
+            pattern. First make sure that you have Full Luma Range
+            (in the &ldquo;Advanced Video Flags...&rdquo; dialog)
+            turned on.  Set the Histogram filter&rsquo;s <FONT COLOR="#993300">Display Mode</FONT> to
             &ldquo;brightness,&rdquo; then open up the &ldquo;Video Settings...&rdquo; dialog.
           </P>
           <P>
-            Move the Brightness slider until the low
-            end of the brightness distribution &mdash; which corresponds with black &mdash; is at the very
+            Move the Brightness slider until the lowest
+            peak in the brightness distribution &mdash; which corresponds with black &mdash; is at the very
             left end of the graph.
           </P>
           <P>
             Then wait until something really, really bright is on screen.  Move the Contrast slider until the
-            whole brightness distribution is shown in the histogram.  It&rsquo;s very important that something
+            whole brightness distribution is shown in the histogram.  It&rsquo;s important that something
             very bright be on the screen when you do this &mdash; Otherwise, you&rsquo;ll be cutting off
-            important brightness information.
+            meaningful brightness information.
           </P>
           <P>
-            You may need to change your Overlay brightness and contrast settings after you do this.
+            You may need to change your overlay brightness and contrast settings after you do this.
           </P>
           <P>
             Though this procedure is better than not calibrating at all, it isn&rsquo;t as nice as calibration
-            based on a known pattern.  Using the histogram maximizes the available &ldquo;information,&rdquo;
+            based on a known pattern.  Using the histogram maximizes the available information,
             but it does not give you any way to verify the accuracy of the result.
           </P>
           <P>
