Updated for alpha

--- a/DScaler/Help/Install.htm
+++ b/DScaler/Help/Install.htm
@@ -132,16 +132,13 @@ DScaler autodetect the proper aspect ratio.</p>
 <p><br>
  For more information about the advanced features available via
 the DScaler.ini file, please see the <a href=
-"../IniFile.HTM">.ini documentation</a>.</p>
+"IniFile.HTM">.ini documentation</a>.</p>
 
 <h2><br>
  What if That Doesn't Work?</h2>
 
-<p>Please visit the HTPC section of the <a href=
-"http://www.avsforum.com/">AVS Forum</a> for help. The forum has
-high traffic and a good search function. Chances are high that a
-search will reveal that others have had your problem too and may
-have figured out a way to fix it.</p>
+<p><a href=
+"user_support.htm">See the support page here.</a></p>
 
 <!-- #EndEditable --></td>
 </td>
