--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -54,41 +54,33 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>DScaler - version 3.0.10</h1>
+<h1>DScaler - version 4.0.0</h1>
 
 <p>What's new:<br>
-    Massive improvements to 2:2 pulldown detection.<br>
-    Improvements to 3:2 pulldown detection on material with bad
-cadence.<br>
-    New mixer control for users not bypassing the PC with
-sound.<br>
-    Channel editing with fine tuning<br>
-    New UI support for all most ini file settings<br>
-    Greedy 2 frame improved (by fixing glaring bug).<br>
-    Overlay fixes.<br>
-    Auto-Calibration.<br>
-    Experimental Time-shifting support.<br>
-    Improved auto-aspect ratio detect.<br>
-    Auto-format detection (switches between PAL and NTSC by
-default)<br>
-    Updated Linear Correction Filter with alpha non-linear zoom
-mode<br>
-    Improved Sound support<br>
-    Additional card support<br>
-    Teletext improvements<br>
-    NTSC50 mode for Chris Williams<br>
-    Always on top full screen flag<br>
-    Gamma filter fixed<br>
-    Various Bug Fixes<br>
-    Additional code pages for teletext<br>
-    More flexible zoom and positioning<br>
-    Alpha Logo Killer plug-in<br>
-    Alpha Sharpness Filter<br>
-    Tom Barry's new all-singing all-dancing Greedy High Motion plugin<br>
-    Increased range of contrast and saturation<br>
-    Added Lindsey Dubb's Old Game Filter<br>
-    Added PAL-NC mode for Argentina<br>
-</p>
+<ul>
+<li>Support of multiple BT cards</li>
+<li>Optimized field access code for fewer dropped frames</li>
+<li>New Adaptive Noise Filter</li>
+<li>New Gradual Noise Filter</li>
+<li>New Histogram Filter</li>
+<li>Flickerless OSD</li>
+<li>Teletext support improved</li> 
+<li>Additional Teletext languages</li>
+<li>Action added to search and lock the correct film mode</li>
+<li>Sharpness Filter now works with older (MMX/3DNOW) computers</li>
+<li>Some minor improvements to Temporal Comb Filter</li>
+</ul></p>
+
+<p>What's Experimental:
+<ul>
+<li>New audio code</li>
+<li>Support of DirectShow filters supporting AVI files</li>
+<li>Support of TIFF files</li>
+<li>Playlist for stills</li>
+<li>Set of patterns to setup the overlay and the display</li>
+<li>Direct access to the stills taken during the current session</li>
+</ul></p>
+
 <!-- #EndEditable -->
 </td>
 </tr>
