--- a/DScaler/Help/user_support.htm
+++ b/DScaler/Help/user_support.htm
@@ -53,57 +53,52 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<p>Currently, most support DScaler is provided through the <a target="_blank" 
-href="http://www.avsforum.com/avs-vb/forumdisplay.php?s=&forumid=26">AVS Home
-Theater PC Forum</a>, the largest such forum on the internet and
-a great place to pick up information and advice.</p>
-
-<p>Because of the way DScaler is developed some parts of it are much more stable
-than others and indeed some parts of the code are considered experimental.  The 
-parts of the code currently considered experiemental are:</p>
-<ul>
-<li>Time-shifting</li>
-<li>Teletext</li>
-<li>Closed Capions</li>
-</ul><p>Please do not report bugs in these areas to the forum.</p>
-
-<p>Additionally there is the ongoing problem of sound support, please read
-<a href="SoundIssues.htm">this explaination of Sound Issues</a> before posting 
-issues relating to sound in the <a target="_blank" href=
-"http://www.avsforum.com/avs-vb/showthread.php?s=&postid=654909&t=7777#post654909">
-Sound Issues Thread</a></p>
-
-<p>We also suggest that you do a <a target="_blank" href=
-"http://www.avsforum.com/avs-vb/search.php?s=">search</a>
-of the "Home Theater Computer" forum to ensure that your question has not already been
-answered. Bugs can also be posted in the <a target="_blank" href=
-"http://sourceforge.net/bugs/?group_id=7420">DScaler bugs page</a> at 
-<a target="_blank" href="http://sourceforge.net/">SourceForge</a>,
-this list should reflect the current known bugs.  Please try to
-give as much information as possible when describing your
-problem.</p>
-
-<p>Support at <a target="_blank" href=
-"http://www.avsforum.com/avs-vb/index.php?s=">AVS</a> is given by
-the helpful members of the community, whether they be involved in
-this project or not. However, some people that may appear often
-to answer user questions and who are affiliated with project
-include:</p>
-
-<p><u>User support<br>
-</u>Dan Schmelzer (dschmelzer) <br>
- Yvon Quere (Yvonus)<br>
- Jason Castle (jcastle)<br>
- (Slithy Tove)</p>
-
-<p><u>DScaler Developers</u><br>
- John Adcock (JohnAd)<br>
- Mark Rejhon<br>
- Steve Grimm (StevenGrimm)<br>
- Tom Barry (trbarry)<br>
- Peter Gubanov (pgubanov)<br>
- Michael Eskin (eskin)</p>
-
+      <p>Currently, user support is provided through the new <a href="http://www.dscaler.org/phpBB/index.php">DScaler 
+        Support Forums</a>. Please do a <a href="http://www.dscaler.org/phpBB/search.php">forum search</a> 
+        for your particular question to ensure that it has not been asked and 
+        answered already. If you believe that you have identified a previously 
+        unknown bug, please post it in the <a
+target="_blank" href=
+"http://sourceforge.net/bugs/?group_id=7420">DScaler bugs page</a> at <a target="_blank" href=
+"http://sourceforge.net/">SourceForge</a>.  Please check to make sure that the 
+        bug has not already been reported and try to give as much information 
+        as possible when describing the bug.</p>
+      <p>In the past, most support was provided through the <a
+target="_blank" href=
+"http://www.avsforum.com/avs-vb/forumdisplay.php?s=&forumid=26">AVS Home Theater 
+        PC Forum</a>, the largest such forum on the internet and a great place 
+        to pick up information and advice. DScaler had its genesis on the AVS 
+        Forum and many DScaler developers visit often. For general home theater 
+        PC discussion, we continue to recommend AVS Forum highly.</p>
+      <p>Because of the way DScaler is developed, some parts of it are much more 
+        stable than others and indeed some parts of the code are considered experimental. 
+        The parts of the code currently considered experimental are:</p>
+      <ul>
+        <li>Time-shifting</li>
+        <li>Closed Captions</li>
+        <li>DScaler DirectShow Filter</li>
+        <li>DirectShow Support</li>
+        <li>Still Support</li>
+        <li>Patterns</li>
+      </ul>
+      <p>Please do not report bugs or support questions in these areas to the 
+        forum.</p>
+      <p>Additionally, there is the ongoing problem of sound support, please read 
+        <a target="_blank" href=
+"http://www.dscaler.org/Help/index.php?helppage=SoundIssues.htm">this explanation 
+        of Sound Issues</a> before posting issues relating to sound in the <a target="_blank" href=
+"http://www.avsforum.com/avs-vb/showthread.php?s=&postid=654909&t=7777#post654909"> 
+        AVS Forum Sound Issues Thread</a>.</p>
+      <p>Support is given by the helpful members of the community, whether they 
+        be involved in this project or not. However, some people that may appear 
+        often to answer user questions and who are affiliated with project include:</p>
+      <p><u>User support<br>
+        </u>Dan Schmelzer (dschmelzer)<br>
+        Yvon Quere (Yvonus)<br>
+        Jason Castle (jcastle)<br>
+        (Slithy Tove)</p>
+      <p>Of course, most of your questions will be answered by the <a href="Authors.htm">DScaler 
+        developers</a>.</p>
 <!-- #EndEditable -->
 </td>
 </tr>
