Added Rob to developers list

--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -121,8 +121,8 @@ purple-lines interference.</p>
 <blockquote>
 <p>In his time off from being confused with the similarly named French DJ, 
 Laurent has been very busy adding some of the coolest new features in recent releases:
-auto-calibration, the OSD (On Screen Display), WSS (WideScreen Signalling) and per-format
-settings.</p>
+auto-calibration, the OSD (On Screen Display), WSS (WideScreen Signalling), per-format
+settings, stills source and patterns.</p>
 </blockquote>
 
 <h2>Torbj&ouml;rn Jansson</h2>
@@ -161,6 +161,12 @@ alter ego "Hermes Conrad".</p>
 
 <blockquote>
 <p>Added support for overlay colour controls.</p>
+</blockquote>
+
+<h2>Rob Muller</h2>
+
+<blockquote>
+<p>Rob has quickly established himself as a core part of the team.  He has fixed problems all over the code and also provided the new setup routine.</p>
 </blockquote>
 
 <p>Please see the <a href="Thanks.htm">Thanks</a> file for an
