--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -108,6 +108,8 @@ for aspect ratio support.</li>
 
 <li>Eduardo José Tagle for the PAL-NC patch.</li>
 
+<li>Robin Zalek (aka Bob) for the new icon.</li>
+
 <li>Everybody on the deinterlace project mailing list.</li>
 </ul>
 
