Change my entry in the Authors page

--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -119,10 +119,10 @@ purple-lines interference.</p>
 <h2>Laurent Garnier</h2>
 
 <blockquote>
-<p>In his time off from being confused with the similarly named French DJ, 
-Laurent has been very busy adding some of the coolest new features in recent releases:
-auto-calibration, the OSD (On Screen Display), WSS (WideScreen Signalling), per-format
-settings, stills source and patterns.</p>
+        <p>In his time off from being confused with the similarly named French DJ, Laurent 
+          has been very busy adding some of the coolest new features in recent 
+          releases: auto-calibration, the OSD (On Screen Display), WSS (WideScreen 
+          Signalling), stills source and patterns.</p>
 </blockquote>
 
 <h2>Torbj&ouml;rn Jansson</h2>
@@ -191,7 +191,7 @@ effort.</p>
 
 <p> </p>
 
-<!-- #EndTemplate -->
-</body>
+</body><!-- #EndTemplate -->
+
 </html>
 
