Fixed a couple of typos spotted by Thomas

--- a/DScaler/Help/32spec.htm
+++ b/DScaler/Help/32spec.htm
@@ -54,7 +54,7 @@ height="2"></td>
 
 <tr>
 <td colspan="3"><!-- #BeginEditable "Text" -->
-<h1>Mark Rejhon's 3:2 Pulldown Alogrithm</h1>
+<h1>Mark Rejhon's 3:2 Pulldown Algorithm</h1>
 
 <p>Here's a simplified pseudocode implementation of <a href=
 "http://www.avsforum.com/ubb/Forum12/HTML/000071.html" target=
@@ -64,7 +64,7 @@ really don't care about 2:2 pulldown at all as I only see this
 happening only 0.1 to 0.5% of the time on NTSC television.
 Without further ado, here you go!</p>
 
-<p><b>START PSUEDOCODE FOR AUTOMATIC 3:2 PULLDOWN
+<p><b>START PSEUDOCODE FOR AUTOMATIC 3:2 PULLDOWN
 DETECTION</b></p>
 
 <code>
