Keyboard shortcuts updated in help

--- a/DScaler/Help/keyboard.htm
+++ b/DScaler/Help/keyboard.htm
@@ -114,6 +114,14 @@ height="2"></td>
       <table border="0">
         <tr> 
           <td width="200"> 
+            <p><small>Open file</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+O</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
             <p><small>Exit</small></p>
           </td>
           <td valign="bottom"> 
@@ -162,6 +170,14 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
+            <p><small>Toggle Keyboard Lock</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+Shift+L</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
             <p><small>Show OSD</small></p>
           </td>
           <td valign="bottom"> 
@@ -186,14 +202,6 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Take Still Picture</small></p>
-          </td>
-          <td valign="bottom"> 
-            <p><small>L</small></p>
-          </td>
-        </tr>
-        <tr> 
-          <td width="200"> 
             <p><small>Take snapshot for debugging</small></p>
           </td>
           <td valign="bottom"> 
@@ -202,18 +210,18 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Help</small></p>
+            <p><small>Reset Statistics</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>F1</small></p>
+            <p><small>R</small></p>
           </td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Return From fullscreen</small></p>
+            <p><small>Help</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>Esc</small></p>
+            <p><small>F1</small></p>
           </td>
         </tr>
       </table>
@@ -253,7 +261,7 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Other 1</small></p>
+            <p><small>Input 5</small></p>
           </td>
           <td valign="bottom"> 
             <p><small>Ctrl+Alt+F5</small></p>
@@ -261,10 +269,18 @@ height="2"></td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Other 2</small></p>
+            <p><small>Input 6</small></p>
           </td>
           <td valign="bottom"> 
             <p><small>Ctrl+Alt+F6</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Input 7</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+Alt+F7</small></p>
           </td>
         </tr>
       </table>
@@ -402,19 +418,43 @@ height="2"></td>
           </td>
         </tr>
       </table>
-      <p><b>Picture Adjustments</b></p>
+      <p><b>Deinterlace</b></p>
       <table border="0">
         <tr> 
           <td width="200"> 
-            <p><small>Brightness Down</small></p>
+            <p><small>Loop on video modes (first to last)</small></p>
           </td>
-          <td valign="bottom"> 
-            <p><small>B</small></p>
+          <td valign="bottom" width="110"> 
+            <p><small>Space</small></p>
           </td>
         </tr>
         <tr> 
-          <td></td>
+          <td width="200"> 
+            <p><small>Loop on video modes (last to first)</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Shift+Space</small></p>
+          </td>
         </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Search and lock mode</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Ctrl+Shift+Space</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Toggle automatic film/video detection</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Ctrl+Space</small></p>
+          </td>
+        </tr>
+      </table>
+      <p><b>Picture Adjustments</b></p>
+      <table border="0">
         <tr> 
           <td width="200"> 
             <p><small>Brightness Down</small></p>
@@ -604,10 +644,26 @@ height="2"></td>
       <table border="0">
         <tr> 
           <td width="200"> 
-            <p><small>Toggle Automatic Detect</small></p>
+            <p><small>Automatic Detection ON</small></p>
           </td>
           <td valign="bottom"> 
             <p><small>A</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Automatic Detection OFF</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Shift+A</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Toggle Automatic Detection</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+Shift+A</small></p>
           </td>
         </tr>
         <tr> 
@@ -619,46 +675,51 @@ height="2"></td>
           </td>
         </tr>
         <tr> 
-          <td></td>
-        </tr>
-        <tr> 
           <td width="200"> 
-            <p><small>Toggle Automatic Detect</small></p>
+            <p><small>Toggle Image Clipping</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>A</small></p>
-          </td>
-        </tr>
-        <tr> 
-          <td width="200"> 
-            <p><small>Detect from Current Image</small></p>
-          </td>
-          <td valign="bottom"> 
-            <p><small>`</small></p>
+            <p><small>Ctrl+P</small></p>
           </td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Stretch to Window</small></p>
+            <p><small>Window on Top</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>0</small></p>
+            <p><small>Ctrl+Numpad-Up</small></p>
           </td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Zoom -</small></p>
+            <p><small>Window centered</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>Z</small></p>
+            <p><small>Ctrl+Numpad 5</small></p>
           </td>
         </tr>
         <tr> 
           <td width="200"> 
-            <p><small>Zoom +</small></p>
+            <p><small>Window on Bottom</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>Shift+Z</small></p>
+            <p><small>Ctrl+Numpad-Dn</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Toggle Image Bouncing</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+B</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Toggle Orbiting</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Alt+O</small></p>
           </td>
         </tr>
       </table>
@@ -678,6 +739,22 @@ height="2"></td>
           </td>
           <td valign="bottom"> 
             <p><small>Ctrl+1</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>1.44 Letterboxed</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+7</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>1.55 Letterboxed</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>Ctrl+8</small></p>
           </td>
         </tr>
         <tr> 
@@ -843,7 +920,7 @@ height="2"></td>
             <p><small>Zoom In</small></p>
           </td>
           <td valign="bottom"> 
-            <p><small>Shift + Z</small></p>
+            <p><small>Shift+Z</small></p>
           </td>
         </tr>
         <tr> 
@@ -1045,6 +1122,57 @@ height="2"></td>
           </td>
           <td valign="bottom"> 
             <p><small>BackSpace</small></p>
+          </td>
+        </tr>
+      </table>
+      <p><b>Stills</b></p>
+      <table border="0">
+        <tr> 
+          <td width="200"> 
+            <p><small>First file in playlist</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Ctrl+Home</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Last file in playlist</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Ctrl+End</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Previous file in playlist</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Ctrl+PgUp</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Next file in playlist</small></p>
+          </td>
+          <td valign="bottom" width="110"> 
+            <p><small>Ctrl+PgDn</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Take Still Picture</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>L</small></p>
+          </td>
+        </tr>
+        <tr> 
+          <td width="200"> 
+            <p><small>Show Informations about Still Picture</small></p>
+          </td>
+          <td valign="bottom"> 
+            <p><small>I</small></p>
           </td>
         </tr>
       </table>
