--- a/DScaler/Help/AdaptiveNoise.htm
+++ b/DScaler/Help/AdaptiveNoise.htm
@@ -201,6 +201,24 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             level. In that case, the <A HREF="Noise.HTM">Temporal
             Noise</A> filter is probably your best bet.
           </P>
+          <P>
+            <B><FONT FACE="Arial" COLOR="#993300">
+              Fast Memory Access
+            </FONT></B>
+          </P>
+          <P>
+            You&rsquo;ll probably want to keep this setting turned on.
+						With it enabled, the filter will run up to twice as
+						fast.
+          </P>
+          <P>
+            However, there are a few motherboards&nbsp;&mdash; mostly
+						made by VIA&nbsp;&mdash; for which <FONT COLOR="#993300">
+            Fast Memory Access</FONT> will cause problems.  If you see
+						fleeting horizontal lines in your picture, try turning this
+						off in any filters which offer it.  If that fixes the lines,
+						you&rsquo;ll know to keep this setting disabled.
+          </P>
           <HR>
           <P>
             <B><A NAME="Fun With Noise"><FONT FACE="Arial" SIZE="4">
